SCAT-2918 - extending AssessmentController tests